fix: Calculator 메서드 내부처리 유연성 추가